--- a/src/main/webapp/WEB-INF/templates/navigation.xhtml
+++ b/src/main/webapp/WEB-INF/templates/navigation.xhtml
@@ -37,8 +37,8 @@
 	                        rendered="#{securityHelper.isInRole('LEAGUE_SUPERVISOR')}"/>
 	            </li>
 	            <li>
-	                <h:link value="About Us" outcome="/about"
-	                        styleClass="#{currentTitle=='About' ? 'current' : ''}"
+	                <h:link value="Guide" outcome="/guide"
+	                        styleClass="#{currentTitle=='Guide' ? 'current' : ''}"
 	                        rendered="#{securityHelper.isInRole('PLAYER')}"/></li>
 	            <li>
 	                <h:form>
