--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -425,6 +425,7 @@ input[type="submit"]:active {
 	-moz-border-radius: 6px;
 	-webkit-border-radius: 6px;
 	border-radius: 6px;
+	margin-bottom: 30px;
 }
 
 /* tables */
